we need a useful new property or new DataObject type to describe a C header which does not have an absolute path. Comment it out for now.

BUG: 278593
REVIEW: 103258